2005-08-18  Kristian Høgsberg  <krh@redhat.com>

	* configure.in: Fix typo in freetype configure check.

2005-08-17  Kristian Høgsberg  <krh@redhat.com>

	* configure.in: Try to use pkg-config to detect freetype2, then
	fall back to the existing freetype-config based check.

2005-08-17  Carl Worth  <cworth@cworth.org>

 	Fixes for bug #4110:

	* src/cairo-ft-font.c (_cairo_ft_unscaled_font_init): Don't call
	_cairo_ft_unscaled_font_init_key in the from_face case, just clear
	filename and id instead. Initialize unscaled->base first so that
	initialization order matches the structure declaration order.

	* src/cairo-cache.c (_cairo_hash_string): Fix to accept a NULL
	string and hash it identically to a zero-length string.

	* test/Makefile.am:
	* test/ft-font-create-for-ft-face: Add a test that calls
	cairo_ft_font_create_for_ft_face to demonstrate bug #4110.

2005-08-16  Billy Biggs  <vektor@dumbterm.net>

	* test/filter-nearest-offset.c: (draw): Fix the filter-nearest-offset
	test to actually test CAIRO_FILTER_NEAREST.

2005-08-16  Owen Taylor  <otaylor@redhat.com>

	* src/cairo-region.c (_cairo_region_rectangle_extents) 
	(_cairo_region_create_from_rectangle) src/cairoint.h: Split out
	a couple of useful utility functions.

	* src/cairo-clip.c src/cairo-gstate.c: Use them.

	* src/cairo-surface.c (_cairo_surface_fill_region): Move code to
	fill a pixman_region16_t to here.

	* src/cairo-surface.c (_cairo_surface_fill_rectangle)
	* src/cairo-surface.c (_cairo_surface_fill_rectangles): Document.

	* src/cairo-gstate.c (_cairo_surface_clip_and_composite_trapezoids):
	Use _cairo_surface_fill_region().

	* src/cairo-surface.c (_cairo_surface_composite_fixup_unbounded):
	Add a return status, use regions to simplify.

	* src/cairoint.h
	* src/cairo-image-surface.c (_cairo_image_surface_composite)
	* src/cairo-xlib-surface.c (_cairo_xlib_surface_composite)
	(_show_glyphs_fixup_unbounded): Handle the return value from
	_cairo_surface_composite_fixup_unbounded().
