@@ -1,3 +1,8 @@
+2005-08-18  Carl Worth  <cworth@cworth.org>
+
+	* Makefile.am: Clear setgid bit on regular files prior to tarring
+	up a release.
+
 2005-08-18  Kristian Høgsberg  <krh@redhat.com>
 
 	* configure.in: Fix typo in freetype configure check.
